# service/api/api-handler.go
@@ -12,6 +12,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.POST("/sessions", rt.wrap(rt.doLogin))
 	rt.router.GET("/users/:username/homepage", rt.wrap(rt.getMyStream))
 	rt.router.PUT("/users/:username", rt.wrap(rt.setMyUserName))
+	rt.router.GET("/users/:username/profile", rt.wrap(rt.getUserProfile))
 
 	rt.router.POST("/users/:username/photos/", rt.wrap(rt.uploadPhoto))
 	rt.router.GET("/users/:username/photos/", rt.wrap(rt.getUserPhoto))
